# pr2motion

./: .gitignore  Makefile.am  configure.ac  pr2motion-genom3-uninstalled.pc.in  pr2motion-genom3.pc.in  pr2motion.gen  pr2motion.interface  pr2motionConst.idl  pr2motionStruct.idl
codels/: Makefile.am  pr2_arm_client.cc  pr2_arm_client.cc~  pr2_arm_client.hh  pr2_arm_client.hh~  pr2_gripper_client.cc  pr2_gripper_client.cc~  pr2_gripper_client.hh  pr2_gripper_client.hh~  pr2_gripper_sensor_client.cc  pr2_gripper_sensor_client.hh  pr2_head_client.cc  pr2_head_client.cc~  pr2_head_client.hh  pr2_head_client.hh~  pr2_model.cc  pr2_model.hh  pr2_state_client.cc  pr2_state_client.cc~  pr2_state_client.hh  pr2_state_client.hh~  pr2_torso_client.cc  pr2_torso_client.cc~  pr2_torso_client.hh  pr2_torso_client.hh~  pr2motion_codels.cc  pr2motion_main_codels.cc
codels/trajectories/: ExampleG.cpp  PathG.cpp  PathG.h  TrajectoryG.cpp  TrajectoryG.h
doc/: compil-pr2motion  compil-pr2motion~  ros-command-line-pr2motion  ros-command-line-pr2motion~  test-pr2motion.tcl  test-pr2motion.tcl~
